# jusRAG

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.override.local.yml  docker-compose.yml  jus-rag-brasil-prompt-master.md  pyproject.toml
.claude/agents/: agentic-agent.md  answer-agent.md  eval-agent.md  foundation-agent.md  ingestion-agent.md  legal-domain-agent.md  qa-agent.md  retrieval-agent.md  ui-docs-agent.md
.claude/skills/jusrag-build/: SKILL.md
.claude/skills/legal-chunking/: SKILL.md
.claude/skills/legal-evals/: SKILL.md
.claude/skills/legal-rag-contracts/: SKILL.md
.claude/skills/legal-rag-safety/: SKILL.md
.github/workflows/: ci.yml
_workspace/: 01_foundation_summary.md  01_ui-docs_summary.md  02_ingestion_summary.md  02_legal-domain_summary.md  02_ui-docs_summary.md  03_retrieval_summary.md  04_answer_summary.md  05_answer_auditor_summary.md  05_eval_summary.md  06_answer_caselaw_summary.md  06_ingestion_caselaw_summary.md  06_retrieval_caselaw_summary.md  07_agentic_summary.md  08_eval_summary.md  09_ui_summary.md  10_answer_ad1_fix.md  10_foundation_summary.md  10_qa_final_report.md  10_ui-docs_summary.md  11_answer_http_graph_summary.md  11_answer_offline_summary.md  11_retrieval_offline_summary.md  13_E2_cdc-inf-01_decision.md  13_E3_markdown_lint.md  13_answer_auditor_recalibration_summary.md  13_eval_golden_expansion_summary.md  13_eval_real_harness_summary.md  13_eval_real_local_report.json  13_eval_real_local_summary.md  13_eval_real_openai_report.json  13_eval_real_openai_report.md  13_eval_real_openai_summary.md  13_eval_sample_llm_summary.md  13_human_curation_task_v1.3.md  13_ingestion_caselaw_expansion_summary.md  13_ingestion_cdc_full_summary.md  13_ingestion_stj_curadoria_summary.md  13_oos_leaked_eval_openai_after.json  13_oos_leaked_eval_openai_after.md  13_oos_leaked_investigation_summary.md  (+34 more)
apps/api/: dependencies.py  main.py
apps/api/routes/: ask.py  health.py  search.py
apps/web/: README.md  app.py
apps/worker/jobs/: ask_demo.py  chunk_jsonl.py  index_cdc.py  index_corpus.py  index_opensearch.py  ingest_case_law.py  ingest_cdc.py  ingest_codes.py  search_demo.py
data/seed/case_law/: stj_consumer_seed.jsonl
data/seed/cdc/: cdc.md
data/seed/civil_cc/: cc.md
data/seed/civil_cpc/: cpc.md
data/seed/constitucional/: cf88.md
data/seed/criminal_cp/: cp.md
data/seed/criminal_cpp/: cpp.md
data/seed/labor_clt/: clt.md
data/seed/questions/: civil_golden.yaml  consumer_golden.yaml  (+6 more)
docs/: architecture.md  demo-script.md  evaluation.md  governance.md  legal-rag-design.md  limitations.md  roadmap.md  source-policy.md
scripts/: calibrate_hybrid.py
tests/evals/: test_answer_eval.py  test_anti_overfit.py  test_golden.py  test_retrieval_eval.py  test_run_all.py  test_unsupported_claims.py
tests/integration/: test_ask.py  test_ask_demo.py  test_code_article_coverage.py  test_health.py  test_search.py
tests/unit/: conftest.py
(+71 files in other folders)
